# mimic-iii-mortality

./: .gitignore  .isort.cfg  Main_modality_model.py  Model_n_Dataset.py  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  train.sh
src/: Main_modality_model.py  Main_v5_Phenotype_all_classes_48_multilabel_no_EHR_FM_with_dual_TF_real_data_BCE.py  Model_n_Dataset.py
src/evid_multimodal_ehr/: __init__.py  dst_pytorch.py  evid_modules.py
src/evid_multimodal_ehr/mlp/: __init__.py  enn_fusion.py
src/evid_multimodal_ehr/utils/: __init__.py  loss.py  torch_utils.py  types.py
src/utils/: move_mimic_iv_reports.py  roc.py
